--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,7 +7,7 @@
       "test": "echo \"Error: no test specified\" && exit 1",
       "start": "nodemon index.js",
       "createDb": "node ./sql/createDb.js",
-      "createTables": "node ./sql/createTables.js"
+      "createTables": "node ./sql/createTable.js"
     },
     "keywords": [],
     "author": "",
