--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,23 +4,23 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "nodemon index.js",
-      "createDb": "node ./sql/createDb.js",
-      "createTables": "node ./sql/createTable.js"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon server.js",
+        "createDb": "node ./sql/createDb.js",
+        "createTables": "node ./sql/createTable.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "bcrypt": "^5.0.1",
-      "cors": "^2.8.5",
-      "express": "^4.18.1",
-      "jsonwebtoken": "^8.5.1",
-      "mysql": "^2.18.1"
+        "bcrypt": "^5.0.1",
+        "cors": "^2.8.5",
+        "express": "^4.18.1",
+        "jsonwebtoken": "^8.5.1",
+        "mysql": "^2.18.1"
     },
     "devDependencies": {
-      "dotenv": "^16.0.3",
-      "nodemon": "^2.0.20"
+        "dotenv": "^16.0.3",
+        "nodemon": "^2.0.20"
     }
-  }
+}
