--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,7 +7,8 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "nodemon server.js",
         "createDb": "node ./sql/createDb.js",
-        "createTables": "node ./sql/createTable.js"
+        "createTables": "node ./sql/createTable.js",
+        "createMock": "node ./sql/createMockData.js"
     },
     "keywords": [],
     "author": "",
