--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "bcrypt": "^5.0.1",
         "body-parser": "^1.20.1",
+        "bootstrap": "^5.2.2",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "express": "^4.18.1",
